--- a/index.html
+++ b/index.html
@@ -9,7 +9,14 @@
     <script async 
       src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4643050830953659"
       crossorigin="anonymous">
-    </script>
+    </script> <!-- Google Auto Ads -->
+<script>
+  (adsbygoogle = window.adsbygoogle || []).push({
+    google_ad_client: "ca-pub-4643050830953659",
+    enable_page_level_ads: true
+  });
+</script>
+
   </head>
 
   <body>
@@ -17,3 +24,4 @@
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
+
