--- a/index.html
+++ b/index.html
@@ -1,27 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Money Maker App</title>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Money Maker App</title>
 
-    <!-- Google AdSense -->
-    <script async 
-      src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4643050830953659"
-      crossorigin="anonymous">
-    </script> <!-- Google Auto Ads -->
-<script>
-  (adsbygoogle = window.adsbygoogle || []).push({
-    google_ad_client: "ca-pub-4643050830953659",
-    enable_page_level_ads: true
-  });
-</script>
+  <!-- Pinterest Verification -->
+  <meta name="p:domain_verify" content="836c69308528f4877d12bde4627f9faa" />
 
-  </head>
+  <!-- Google AdSense Auto Ads -->
+  <script async
+    src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4643050830953659"
+    crossorigin="anonymous"></script>
 
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
-  </body>
-</html>
+  <script>
+    (adsbygoogle = window.adsbygoogle || []).push({
+      google_ad_client: "ca-pub-4643050830953659",
+      enable_page_level_ads: true
+    });
+  </script>
+</head>
+
 
