--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!-- Pinterest Tag -->
 <script>
 !function(e){if(!window.pintrk){window.pintrk = function () {
-window.pintrk.queue.push(Array.prototype.slice.call(arguments))};
+window.pintrk.queue.push(Array.prototype.slice.call(arguments))}};
 var
 n=window.pintrk;n.queue=[],n.version="3.0";
 var t=document.createElement("script");
@@ -10,7 +10,7 @@ var r=document.getElementsByTagName("script")[0];
 r.parentNode.insertBefore(t,r)}
 }("https://s.pinimg.com/ct/core.js");
 
-pintrk('load','2612412658221', {em: '<user_email_address>'});
+pintrk('load','2612412658221');
 pintrk('page');
 </script>
 <noscript>
@@ -18,5 +18,6 @@ pintrk('page');
 src="https://ct.pinterest.com/v3/?event=init&tid=2612412658221&noscript=1" />
 </noscript>
 <!-- end Pinterest Tag -->
+
 
 
