--- a/public/index.html
+++ b/public/index.html
@@ -1,3 +1,5 @@
+<!DOCTYPE html>
+<html lang="en">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -5,19 +7,24 @@
 
   <!-- Pinterest Tag -->
   <script>
-    !function(e){if(!window.pintrk){window.pintrk = function () {
-    window.pintrk.queue.push(Array.prototype.slice.call(arguments))}};
+    !function(e){if(!window.pintrk){window.pintrk=function(){
+    window.pintrk.queue.push(Array.prototype.slice.call(arguments))};
     var n=window.pintrk;n.queue=[],n.version="3.0";
     var t=document.createElement("script");
     t.async=!0;t.src=e;
     var r=document.getElementsByTagName("script")[0];
-    r.parentNode.insertBefore(t,r)}
+    r.parentNode.insertBefore(t,r)}}
     ("https://s.pinimg.com/ct/core.js");
 
     pintrk('load','2612412658221');
     pintrk('page');
   </script>
   <!-- End Pinterest Tag -->
+
 </head>
+<body>
+  <div id="root"></div>
+</body>
+</html>
 
 
