--- a/index.html
+++ b/index.html
@@ -4,6 +4,16 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Money Maker</title>
+    <!-- MailerLite Universal -->
+<script>
+(function(w,d,e,u,f,l,n){w[f]=w[f]||function(){
+(w[f].q=w[f].q||[]).push(arguments)},l=d.createElement(e),l.async=1,
+l.src=u,n=d.getElementsByTagName(e)[0],n.parentNode.insertBefore(l,n)})
+(window,document,'script','https://assets.mailerlite.com/js/universal.js','ml');
+ml('account', '1993251');
+</script>
+<!-- End MailerLite Universal -->
+
   </head>
   <body>
     <div id="root"></div>
